objects/ASI_CRM_Listing_List__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Listing Lists</relationshipLabel>
        <relationshipName>Listing_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Item Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_CN_Not_In_Use__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Listing Lists</relationshipLabel>
        <relationshipName>Listing_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reg_Volume_Monthly__c</fullName>
        <label>Reg Volume (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Listing List</label>
    <nameField>
        <displayFormat>LTL{00000000}</displayFormat>
        <label>Listing List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Lists</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Listing_List</fullName>
        <active>true</active>
        <label>JP Listing List</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>